# devrel-examples

./: .gitignore  CODEOWNERS.txt  NOTICE.txt  README.md
.github/workflows/: deploy.yml
demo_projects/arxiv/: .env.example  .gitignore  README.md  Runbook.ipynb  app.yaml  databricks.yml  evaluation_dataset.json  pyproject.toml
demo_projects/arxiv/app/: main.py
demo_projects/arxiv/arxiv_demo/: ingestion.py
demo_projects/arxiv/blog_drafts/: blog_problem_first.md
demo_projects/arxiv/docs/: knowledge_assistant_setup.md
demo_projects/arxiv/notebooks/: Runbook.ipynb
demo_projects/arxiv/scripts/: backfill_metadata.py  create_eval_table.py  ingest_golden_set.py  parse_golden_set.py  seed_data.py  verify_eval_table.py
demo_projects/arxiv/sql/: 01_create_schema.sql  02_create_tables.sql
demo_projects/arxiv/src/: config.py  eval.py  ingestion.py
demo_projects/arxiv/src/arxiv_demo/: __init__.py  chat.py  config.py  eval.py  ingestion.py  kie.py  parsing.py  setup.py
demo_projects/databricks-ai-newsletter/: .env.example  .gitignore  README.md  databricks.yml  requirements.txt
demos/arxiv/: app.yaml  databricks.yml  requirements.txt
demos/bee-pollinator/: .env.example  .gitignore  README.md  databricks.yml  pyproject.toml  requirements.txt
demos/bee-pollinator/data/snapshots/: colony_loss.csv  colony_stressors.csv  honey_production.csv
demos/bee-pollinator/docs/: BOOTH_SETUP.md  DATA_SOURCES.md  DEMO_GUIDE.md  DEPLOYMENT.md
demos/bee-pollinator/scripts/: create_agents.py  download_docs.py  eval_supervisor.py  generate_snapshots.py  load_data.py  setup_agents.py  setup_data.py  verify_demo.py
demos/casino-floor/: .gitignore  ABM_RESEARCH.md  README.md  SCOPING.md  VISUAL_DESIGN.md
notebooks/: README.md  _config.yml  _toc.yml  index.md  sam2-on-databricks.ipynb
notebooks/mlflow/: 2024-11-27-dspy.ipynb  2024-12-09-inf-server.ipynb  gemini-trace-tool.ipynb
(+54 files in other folders)
