[project]
name = "bee-pollinator-demo"
version = "0.1.0"
description = "Databricks AI demo for bee and pollinator health analysis using USDA data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "databricks-sdk>=0.20.0",
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "mlflow>=2.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
